fix bug and solve the layout problem

--- a/assets/css/globals/responsive.css
+++ b/assets/css/globals/responsive.css
@@ -11,6 +11,7 @@
 
 .footer {
   background: #000;
+  max-width: 100%;
 }
 
 .mobile-visible {
